--- a/src/components/detailed-job/style.module.css
+++ b/src/components/detailed-job/style.module.css
@@ -1,3 +1,3 @@
 .jobDetailsMain{
-  @apply px-4 pt-6 pb-9 text-customBlue-800
+  @apply max-w-[1306px] px-4 pt-6 pb-9 font-bold text-3xl leading-8 tracking-[-0.75px] text-customBlue-800 md:px-6 md:pt-14 md:pb-[89px]
 }
