Finish styling, Add list slicing

--- a/src/components/detailed-job/attached-images/style.module.css
+++ b/src/components/detailed-job/attached-images/style.module.css
@@ -3,7 +3,7 @@
 } */
 
 .imagesSection{
-  @apply pb-[55px] max-w-[100vw] 
+  @apply pb-[55px] md:order-last
 }
 
 .sectionHeading{
@@ -15,9 +15,9 @@
 }
 
 .companyImagesList{
-  @apply flex pb-2 gap-[10px] overflow-x-auto scrollbar-thin scrollbar-track-customGray-100 scrollbar-track-white
+  @apply  flex pb-2 gap-[10px] overflow-x-auto scrollbar-thin scrollbar-track-customGray-100 scrollbar-track-white
 }
 
 .companyImage{
-  @apply min-w-[209px] w-[209px] h-[115px] shrink-0 rounded-lg object-cover 
+  @apply w-[209px] h-[115px] shrink-0 rounded-lg object-cover 
 }
