--- a/src/components/detailed-job/aditional-info/style.module.css
+++ b/src/components/detailed-job/aditional-info/style.module.css
@@ -26,14 +26,20 @@
   @apply mb-[10px] font-normal text-lg leading-6 tracking-[-0.56px] text-customBlue-transperent-80
 }
 
-.AditionalInfoList{
+.benifitsList{
   @apply flex flex-wrap gap-2
 }
 
+.employmenTypeList{
+  @apply flex flex-wrap gap-2 mb-[22px]
+}
+
 .employmentType{
-  @apply mb-[22px] pl-11 pr-5 py-[17px] border border-customGray-600 rounded-lg font-bold text-base leading-4 tracking-[-0.45px] bg-customBlue-transperent-30 text-customBlue-600
+  @apply  pl-11 pr-5 py-[17px] border border-customGray-600 rounded-lg font-bold text-base leading-4 tracking-[-0.45px] bg-customBlue-transperent-30 text-customBlue-600
+  md:px-[0] md:w-[222px] md:text-center
 }
 
 .benifit{
   @apply px-[13px] py-[17px] border border-customYellow-800 rounded-lg font-bold text-base leading-4 tracking-[-0.45px] bg-customYellow-400 text-customYellow-500
+  md:px-[0] md:w-[220px] md:text-center
 }
