--- a/src/components/job-list/tabSelector/style.module.css
+++ b/src/components/job-list/tabSelector/style.module.css
@@ -1,7 +1,7 @@
 .tabSelectorWrapper{
-  @apply flex items-center justify-center h-[52px] mt-[49px] mb-[64px] w-auto mx-auto rounded-[10.4px] shadow-md bg-customGray-150
+  @apply flex items-center justify-center w-full h-10  mt-[26px] mb-[17px] mx-auto rounded-[10.4px] shadow-md bg-customGray-150
+  md:h-[52px] md:w-auto md:mt-[49px]  md:mb-[64px]
 }
-
 
 
 .leftButton{
@@ -25,8 +25,8 @@
 }
 
 .numberButton{
-  @apply w-[24px] h-[52px] border-b-[2.5px] font-bold text-xl leading-6 text-customGray-500 hover:text-customBlue-700
-  md:w-[31px]
+  @apply w-[24px] h-10 border-b-[2.5px] font-bold text-base leading-5  text-customGray-500 hover:text-customBlue-700
+  md:w-[31px] md:h-[52px] md:text-xl md:leading-6 
 }
 
 .active{
